Worked on attraction, promotion, event and venue page design alignment issues

--- a/web/src/shared/components/AgentVenue/GoogleMap/style.scss
+++ b/web/src/shared/components/AgentVenue/GoogleMap/style.scss
@@ -70,9 +70,9 @@
         }
         .direcrtion-icn{
             position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
+            position: absolute;
+            right: 17px;
+            top: 1px;
             @media(max-width: 767px){
                 right: 15px;
             }
